<resources>

    <string name="app_name">FitnessPractice</string>
    <string name="start_session">開始</string>
    <string name="stop_session">終了</string>
    <string name="session_history">履歴</string>
    <string name="activity_history">アクティビティ履歴</string>
    <string name="data_source">データソース</string>

    <string name="login_failure">ログインに失敗しました</string>
    <string name="start_session_failure">セッションの開始に失敗しました</string>
    <string name="stop_session_failure">セッションの開始に失敗しました</string>
    <string name="fetch_session_history_failure">セッション履歴の取得に失敗しました</string>
    <string name="fetch_activity_history_failure">アクティビティ履歴の取得に失敗しました</string>
    <string name="get_data_source_failure">データソースの取得に失敗しました</string>

</resources>
